@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11104] "NaiveJavaScriptWrapper ser ikke ud til at blive brugt længere"
    - bug [10507] "PluginClassLoader virker overflødig"
    - bug [10570] "testbug"
    - bug [11056] "fjern @Ignore fra FlowMapCreatorTest.createMapTest()"
